// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UsersList does not render read and write badges when user is not owner 1`] = `
<div>
  <div
    class="row"
    style="margin: 0px;"
  >
    <h2
      class="text-capitalize"
    >
      accepted
    </h2>
    <i
      class="far fa-question-circle float-right text-secondary"
      data-test-id="accepted-popover"
    />
  </div>
  <div
    class="mb-4 list-group"
  >
    
    <div
      data-test-id="accepted-user-id2"
    >
      <div
        class="list-group-item"
      >
        bar@example.com
      </div>
    </div>
    <div
      data-test-id="accepted-user-id3"
    >
      <div
        class="list-group-item"
      >
        baz@example.com
      </div>
    </div>
  </div>
</div>
`;

exports[`UsersList renders read and write badges when user is owner 1`] = `
<div>
  <div
    class="row"
    style="margin: 0px;"
  >
    <h2
      class="text-capitalize"
    >
      accepted
    </h2>
    <i
      class="far fa-question-circle float-right text-secondary"
      data-test-id="accepted-popover"
    />
  </div>
  <div
    class="mb-4 list-group"
  >
    
    <div
      class="list-group-item"
      data-test-id="accepted-user-id2"
      style="display: block;"
    >
      <div
        class="row"
      >
        <div
          class="pt-1 col-md-6"
        >
          bar@example.com
        </div>
        <div
          class="pt-1 col-md-4"
        >
          <span
            class="badge badge-success"
            data-test-id="perm-write"
          >
            write
          </span>
        </div>
        <div
          class="col-md-2"
        >
          <div
            class="float-right btn-group"
            role="group"
          >
            <button
              class="p-0 mr-4 btn btn-link"
              data-test-id="toggle-permissions"
              type="button"
            >
              <i
                class="fas fa-angle-double-down fa-2x text-warning"
              />
            </button>
            <button
              class="p-0 btn btn-link"
              data-test-id="remove-share"
              type="button"
            >
              <i
                class="fa fa-trash fa-2x text-danger"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="list-group-item"
      data-test-id="accepted-user-id3"
      style="display: block;"
    >
      <div
        class="row"
      >
        <div
          class="pt-1 col-md-6"
        >
          baz@example.com
        </div>
        <div
          class="pt-1 col-md-4"
        >
          <span
            class="badge badge-primary"
            data-test-id="perm-read"
          >
            read
          </span>
        </div>
        <div
          class="col-md-2"
        >
          <div
            class="float-right btn-group"
            role="group"
          >
            <button
              class="p-0 mr-4 btn btn-link"
              data-test-id="toggle-permissions"
              type="button"
            >
              <i
                class="fas fa-angle-double-up fa-2x text-warning"
              />
            </button>
            <button
              class="p-0 btn btn-link"
              data-test-id="remove-share"
              type="button"
            >
              <i
                class="fa fa-trash fa-2x text-danger"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
